# SmartHire-Coach

./: .gitignore  README.md  app.py  interview.py  job_search_assistance.py  pyproject.toml  questions.json  requirements.txt  responses.txt  resume_review.py  test.py
pages/: Resume Analysis.py  Resume Analyzer.py  Resume.py  interview.py  job-search.py
ulits/: helper.py  response.py
utils/: auth.py  helper.py  interview_BK.py  real_time_pipeline.py  session_state.py
