[tool.poetry]
name = "samrthire coach"
version = "0.1.0"
description = ""
authors = ["Dark Coder <codewithdark90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
aiohappyeyeballs = "2.3.4"
aiohttp = "3.10.0"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
brotli = "1.1.0"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.1"
curl-cffi = "0.7.1"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
easyocr = "1.7.1"
exceptiongroup = "1.2.2"
filelock = "3.15.4"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
g4f = "0.3.2.2"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
httpx-sse = "0.4.0"
huggingface-hub = "0.24.5"
idna = "3.7"
imageio = "2.34.2"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
kiwisolver = "1.4.5"
langchain-core = "0.2.27"
langchain-mistralai = "0.1.12"
langchain-text-splitters = "0.2.2"
langsmith = "0.1.96"
lazy-loader = "0.4"
lxml = "5.2.2"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
networkx = "3.3"
ninja = "1.11.1.1"
nltk = "3.8.1"
numpy = "1.26.4"
opencv-python-headless = "4.10.0.84"
orjson = "3.10.6"
packaging = "24.1"
pillow = "10.4.0"
pyclipper = "1.3.0.post5"
pycparser = "2.22"
pycryptodome = "3.20.0"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pyparsing = "3.1.2"
python-bidi = "0.6.0"
python-dateutil = "2.9.0.post0"
python-docx = "1.1.2"
pyyaml = "6.0.1"
regex = "2024.7.24"
requests = "2.32.3"
scikit-image = "0.24.0"
scipy = "1.14.0"
shapely = "2.0.5"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.31"
sympy = "1.13.1"
tenacity = "8.5.0"
tifffile = "2024.7.24"
tokenizers = "0.19.1"
torchvision = "0.19.0"
tqdm = "4.66.4"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
yarl = "1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
